[tool]
[tool.poetry]
name = "dieder"
version = "0.1.0"
description = ""
authors = ["Mark Gemmill"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.9.2"
docopt-ng = "^0.7.2"
rich = "^11.2"

[tool.poetry.scripts]
dieder = "dieder.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
